--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,54 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 300;
+    src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-300.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 400;
+    src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 600;
+    src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-600.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-weight: 900;
+    src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-900.ttf') format('truetype');
+}
+
 :root{
     --color-primary-dark: #31261A;
     --color-primary-light: #FAF4EA;
     --color-brand-light: #819B57;
     --color-brand-dark: #465929;
+    --color-brown-light: #A18268;
 }
 
 /* Base */
 body{
     color: var(--color-primary-dark);
+    font-family: Poppins, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+address{
+    font-style: normal;
 }
 
 ul{
@@ -17,6 +58,7 @@ ul{
 /* Button */
 .button{
     border-radius: 8px;
+    font-weight: 600;
     border: 2px solid var(--color-brand-light);
     background-color: var(--color-brand-light);
     color: var(--color-primary-light);
@@ -30,16 +72,21 @@ ul{
 
 /* Link */
 .link{
-    color: var(--color-primary-light);;
+    text-decoration: none;
+    color: var(--color-primary-light);
 }
 
 .link:hover {
     color: var(--color-brand-light);
+    font-weight: 600;
 }
 
 /* Hero section */
 .hero-title{
-    color: var(--color-primary-light);;
+    color: var(--color-primary-light);
+    font-weight: 900;
+    text-align: center;
+    font-size: 128px;
 }
 
 .hero-title .accent{
@@ -48,10 +95,67 @@ ul{
 
 /* Advantages section */
 .advanteges-list{
-    color: var(--color-primary-light);;
+    color: var(--color-primary-light);
     background-color: var(--color-brand-light);
+}
+
+.advanteges-item{
+    font-weight: 300;
+    font-size: 20px;
+}
+
+.section-title{
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
 }
 
 .section-title .accent{
     color: var(--color-brand-dark);
+}
+
+.traditions-text .brand-color-text{
+    color: var(--color-brand-light);
+    font-weight: 600;
+}
+
+.traditions-text .brand-color-text.uppercase {
+    text-transform: uppercase;
+}
+
+/* Chefs section */
+
+.chefs-title{
+    font-weight: 600;
+    font-size: 40px;
+}
+
+/* Formats-section */
+
+.format-title{
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.format-text{
+    font-weight: 300;
+    font-size: 14px;
+}
+
+/* Footer */
+
+.address-link{
+    font-weight: 300;
+    font-size: 16px;
+    color: var(--color-primary-light);
+    text-decoration: none;
+}
+
+.address-link:hover {
+    color: var(--color-brand-light);
+}
+
+.address-copyright{
+    font-size: 14px;
+    color: var(--color-brown-light);
 }
