--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,23 @@
 }
 
 /* Base */
+
+*{
+    box-sizing: border-box;
+}
+
+
 body{
     color: var(--color-primary-dark);
     font-family: Poppins, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p{
+    margin-top: 0;
 }
 
 address{
@@ -52,11 +63,48 @@ address{
 }
 
 ul{
+    margin: 0;
+    padding: 0;
     list-style-type: none;
+}
+
+.section{
+    padding: 48px, 0;
+}
+
+.container{
+    width: 100%;
+    max-width: 1288px;
+    margin: 0 auto;
+    padding: 0 24px;
+}
+
+/* Header */
+
+.header-container{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-nav{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    gap: 40px   ;
+}
+
+.header-menu{
+    display: flex;
+    flex-direction: row;
+    gap: 64px;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 /* Button */
 .button{
+    padding: 16px 32px;
     border-radius: 8px;
     font-weight: 600;
     border: 2px solid var(--color-brand-light);
@@ -78,11 +126,11 @@ ul{
 
 .link:hover {
     color: var(--color-brand-light);
-    font-weight: 600;
 }
 
 /* Hero section */
 .hero-title{
+    margin-bottom: 0;
     color: var(--color-primary-light);
     font-weight: 900;
     text-align: center;
@@ -93,16 +141,67 @@ ul{
     color: var(--color-brand-light);
 }
 
+.hero-section{
+    padding: 272px 0;
+    background-image:  url('../images/couple-in-bakery.jpg');
+    background-repeat: no-repeat; 
+    background-position: center top;
+    background-size: cover;
+}
+
+ 
+
+/* Our advantages */
+
+.visually-hidden{
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
 /* Advantages section */
-.advanteges-list{
-    color: var(--color-primary-light);
+
+.advanteges-section{
+    padding: 16px 0;
     background-color: var(--color-brand-light);
+}
+
+.advanteges-list{
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+
 }
 
 .advanteges-item{
     font-weight: 300;
     font-size: 20px;
+    color: var(--color-primary-light);
 }
+
+/* Tradition section */
+
+.tradition-content{
+    max-width: 710px;
+}
+
+.traditions-container{
+    display: flex;
+    gap: 100px;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.tradition-title{
+    margin-bottom: 42px;
+}
+
+/* .traditions-section {
+    padding-top: 96px;
+} */
 
 .section-title{
     font-size: 64px;
@@ -123,14 +222,42 @@ ul{
     text-transform: uppercase;
 }
 
+.traditions-text.limited{
+    max-width: 360px;
+}
+
 /* Chefs section */
+
+.chef-title{
+    margin-bottom: 80px;
+}
 
 .chefs-title{
     font-weight: 600;
     font-size: 40px;
+    margin-bottom: 16px;
 }
 
 /* Formats-section */
+
+.format-card{
+    border-radius: 16px;
+    border: 1px solid black;  /*remove*/
+    padding: 24px;
+}
+
+.formats-list{
+    display: flex;
+    gap: 20px;
+}
+
+.formats-item{
+    flex-basis: calc((100%- 40px) / 3);
+}
+
+.formats-title{
+    margin-bottom: 80px;
+}
 
 .format-title{
     font-weight: 600;
@@ -140,6 +267,16 @@ ul{
 .format-text{
     font-weight: 300;
     font-size: 14px;
+}
+
+.format-text p{
+    width: 300px; /*??????*/
+}
+
+/* Contact section */
+
+.contact-title{
+    margin-bottom: 16px;
 }
 
 /* Footer */
