--- a/css/styles.css
+++ b/css/styles.css
@@ -33,14 +33,16 @@
 :root{
     --color-primary-dark: #31261A;
     --color-primary-light: #FAF4EA;
-    --color-brand-light: #819B57;
+    --color-brand-normal: #819B57;
     --color-brand-dark: #465929;
     --color-brown-light: #A18268;
+    --color-brand-light: #cfcfbc; 
+    
 }
 
 /* Base */
 
-*{
+*, *::after, *::before{
     box-sizing: border-box;
 }
 
@@ -52,6 +54,7 @@ body{
     font-weight: 400;
     line-height: 1.5;
     margin: 0;
+    background-color: var(--color-primary-light);
 }
 
 h1, h2, h3, h4, h5, h6, p{
@@ -68,8 +71,12 @@ ul{
     list-style-type: none;
 }
 
+a{
+    display: inline-block;
+}
+
 .section{
-    padding: 48px, 0;
+    padding: 48px 0;
 }
 
 .container{
@@ -107,8 +114,8 @@ ul{
     padding: 16px 32px;
     border-radius: 8px;
     font-weight: 600;
-    border: 2px solid var(--color-brand-light);
-    background-color: var(--color-brand-light);
+    border: 2px solid var(--color-brand-normal);
+    background-color: var(--color-brand-normal);
     color: var(--color-primary-light);
     cursor: pointer;
 }
@@ -125,7 +132,7 @@ ul{
 }
 
 .link:hover {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 /* Hero section */
@@ -138,12 +145,12 @@ ul{
 }
 
 .hero-title .accent{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 .hero-section{
     padding: 272px 0;
-    background-image:  url('../images/couple-in-bakery.jpg');
+    background-image:  url('../images/hero-section-background.jpg');
     background-repeat: no-repeat; 
     background-position: center top;
     background-size: cover;
@@ -166,7 +173,7 @@ ul{
 
 .advanteges-section{
     padding: 16px 0;
-    background-color: var(--color-brand-light);
+    background-color: var(--color-brand-normal);
 }
 
 .advanteges-list{
@@ -193,15 +200,16 @@ ul{
     gap: 100px;
     justify-content: space-between;
     gap: 40px;
+    padding-top: 96px;
 }
 
 .tradition-title{
     margin-bottom: 42px;
 }
 
-/* .traditions-section {
-    padding-top: 96px;
-} */
+.traditions-section {
+    padding-top: 0;
+}
 
 .section-title{
     font-size: 64px;
@@ -209,12 +217,16 @@ ul{
     line-height: 1.3;
 }
 
+.section-title.centered {
+    text-align: center;
+}
+
 .section-title .accent{
     color: var(--color-brand-dark);
 }
 
 .traditions-text .brand-color-text{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     font-weight: 600;
 }
 
@@ -229,7 +241,21 @@ ul{
 /* Chefs section */
 
 .chef-title{
-    margin-bottom: 80px;
+    max-width: 520px;
+    margin: 0 auto 80px;
+}
+
+.chef-image{
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-brown-light);
+}
+
+.chef-title::before, .chef-title::after {
+    display: block;
+    content: '';
+    width: 352px;
+    border: 2px solid var(--color-brand-light);
+
 }
 
 .chefs-title{
@@ -238,12 +264,43 @@ ul{
     margin-bottom: 16px;
 }
 
+.chef-list{
+    display: flex;
+    gap: 40px 30px;
+    flex-wrap: wrap ;
+}
+
+.chefs-item{
+    flex-basis: calc((100% - 30px)/2);
+}
+
+.chef-card{
+    display: flex;
+    gap: 30px;
+}
+
+.chef-text p{
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+    margin-bottom: 0;
+}
+
 /* Formats-section */
 
+.formats-container{
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
 .format-card{
+    height: 444px;
     border-radius: 16px;
     border: 1px solid black;  /*remove*/
     padding: 24px;
+    background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
 }
 
 .formats-list{
@@ -273,13 +330,86 @@ ul{
     width: 300px; /*??????*/
 }
 
+/* Carousel */
+
+.carousel-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    fill: var(--color-primary-dark);
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid var(--color-primary-dark);
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.carousel-button:hover{
+    background-color: var(--color-primary-dark);
+    fill: var(--color-primary-light);
+}
+
+
 /* Contact section */
+
+.contact-section{
+    padding-bottom: 96px;
+}
+
+.contact-container{
+    display: flex;
+    gap: 32px;
+}
+
+.contact-map{
+    flex-shrink: 0;
+    border: none;
+    border-radius: 16px;
+}
 
 .contact-title{
     margin-bottom: 16px;
 }
 
 /* Footer */
+
+.footer{
+    background-image: url('../images/footer-background.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: var(--color-primary-dark);
+    padding: 32px 0;
+
+}
+
+.footer-container{
+    display: flex;
+    gap: 20px;
+}
+
+.footer-nav{
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+
+.footer-logo{
+    flex-basis: 50%;
+}
+
+.footer-menu{
+    flex-basis: 50%;
+}
+
+.footer-address{
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
 
 .address-link{
     font-weight: 300;
@@ -289,10 +419,28 @@ ul{
 }
 
 .address-link:hover {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
+}
+
+.address-icon{
+    fill: var(--color-primary-light);
+}
+
+.address-icon:hover {
+    fill: var(--color-brand-normal);
 }
 
 .address-copyright{
     font-size: 14px;
     color: var(--color-brown-light);
+    margin-bottom: 0;
 }
+
+.address-list{
+    flex-basis: 50%;
+}
+
+.address-info{
+    flex-basis: 50%;
+}
+
